update skills resolving to mutable list for updating person and epics